--- a/frontend/hw-view/src/components/projectPage.css
+++ b/frontend/hw-view/src/components/projectPage.css
@@ -29,3 +29,51 @@
       transform: rotate(360deg);
     }
   }
+
+  .button-gap {
+  margin-right: 10px; /* Adjust the margin value as needed */
+  }
+
+.modal-root {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Style for the modal content */
+.modal-content {
+    background-color: white; /* Set background color of modal content */
+    padding: 100px; /* Add padding to modal content */
+    border-radius: 8px; /* Add border radius to modal content */
+    outline: none; /* Remove default outline */
+}
+
+/* Style for the black overlay */
+.MuiBackdrop-root {
+    background-color: rgba(0, 0, 0, 0.5) !important; /* Set black background with 50% opacity */
+}
+
+.form-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-field {
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.submit-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.submit-button:hover {
+    background-color: #0056b3;
+}
