Added join project functionality (currently using comma separated entries to make a list of authorized users)

--- a/frontend/hw-view/src/components/projectPage.css
+++ b/frontend/hw-view/src/components/projectPage.css
@@ -50,6 +50,7 @@
     padding: 100px; /* Add padding to modal content */
     border-radius: 8px; /* Add border radius to modal content */
     outline: none; /* Remove default outline */
+    text-align: center;
 }
 
 /* Style for the black overlay */
